--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Unity WebGL Player | Solar System</title>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      UnityLoader.instantiate("unityContainer", "Build/WebGL.json");
+      UnityLoader.instantiate("unityContainer", "Build/Build Done.json");
     </script>
   </head>
   <body>
